fixed colors on smallest size

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,4 @@
-$dark-blue: #26313e;
+$dark-blue: #001F48;
 
 .info {
   text-align:center;
@@ -8,8 +8,8 @@ $dark-blue: #26313e;
 }
 
 .footer {
-  border-top:2px solid $dark-blue;
-  border-bottom:2px solid $dark-blue;
+  border-top:2px solid #111;
+  border-bottom:2px solid #111;
   margin: 20px 0px;
   padding: 15px 0px;
 }
