--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,8 @@
-$dark-blue: #26313e;
+$dark-blue: #001F48;
 $background-blue: #929da1;
+$hover: #bbb;
+$active: #E0CE5A;
+$black: #111;
 $navigation-color:#666;
 
 .clear-fix {
@@ -39,6 +42,21 @@ $navigation-color:#666;
   line-height:2.25rem;
   font-weight:normal;
   width:65%;
+  color:$dark-blue;
+}
+
+.header-link  a:hover {
+  color: $hover;
+  text-decoration:none;
+}
+
+.header-link a{
+  color: $dark-blue;
+  text-decoration:none;
+}
+
+.header-link a:active {
+  color: #E0CE5A;
 }
 
 .header-link__last {
@@ -47,43 +65,21 @@ $navigation-color:#666;
 }
 
 .line-2px {
-  background-color:$dark-blue;
+  background-color:$black;
   width: 100%;
   height: 2px;
 }
 
 .line-1px {
-  background-color:$dark-blue;
+  background-color:$black;
   width: 100%;
   height: 1px;
 }
 
-.menu-icon {
-  float:left;
-  display:inline-block;
-}
-
-.menu-text {
-  float:left;
-  display:inline-block;
-  font-family: Times, serif;
-  text-transform: uppercase;
-  letter-spacing: .12rem;
-  line-height:2.25rem;
-  font-size:1.2rem;
-  text-align:center;
-  font-weight: bold;
-}
-
-.maldonado-title-container {
-  height:50px;
-  position:relative;
-}
-
-.material-icons.md-18 { font-size: 18px; }
-.material-icons.md-24 { font-size: 24px; }
-.material-icons.md-36 { font-size: 36px; }
-.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-18 { font-size: 18px;  color:$black;}
+.material-icons.md-24 { font-size: 24px;  color:$black;}
+.material-icons.md-36 { font-size: 36px;  color:$black;}
+.material-icons.md-48 { font-size: 48px;  color:$black;}
 
 .medium {
   display: none;
@@ -91,6 +87,11 @@ $navigation-color:#666;
 
 .small {
   display:none;
+}
+
+.maldonado-title-container {
+  height:50px;
+  position:relative;
 }
 
 .maldonado-title-container {
@@ -105,6 +106,24 @@ $navigation-color:#666;
   height:102px;
   text-align:center;
   margin:16px 0 0 0;
+  color:$black;
+}
+.menu-icon {
+  float:left;
+  display:inline-block;
+}
+
+.menu-text {
+  float:left;
+  display:inline-block;
+  font-family: Times, serif;
+  text-transform: uppercase;
+  letter-spacing: .12rem;
+  line-height:2.25rem;
+  font-size:1.2rem;
+  text-align:center;
+  //font-weight: bold;
+  color:$black;
 }
 
 .office-title-container {
@@ -123,6 +142,7 @@ $navigation-color:#666;
   margin:0;
   margin-right:-50%;
   transform: translate(-50%, 0%);
+  color:$black;
 }
 
 .spanish {
@@ -134,6 +154,7 @@ $navigation-color:#666;
   text-align:center;
   margin-top: 5px;
   margin-bottom:2px;
+  color:$black;
 }
 
 @media (min-width: 387px) {
