--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,4 @@
-$dark-blue: #26313e;
+$dark-blue: #001F48;
 $background-blue: #929da1;
 $navigation-color:#666;
 
@@ -23,6 +23,7 @@ $navigation-color:#666;
   font-family: Times, serif;
   line-height:1.2rem;
   font-weight:bold;
+  color:#111;
 }
 
 .intro-norm {
@@ -30,6 +31,7 @@ $navigation-color:#666;
   font-size:1.1rem;
   font-family: Times, serif;
   line-height:1.35rem;
+  color:#000;
 }
 
 .individual-photo {
